Update print statement from 'Hello' to 'Goodbye'

--- a/course-details.html
+++ b/course-details.html
@@ -115,22 +115,26 @@
               Master the core principles of user experience design and create intuitive, user-centered digital products
               that delight your users and drive business results.
             </p>
-
-            <div class="bg-base-100 rounded-2xl shadow-xl overflow-hidden mb-8">
+            
+            <a href="course-player.html"
+              class="block bg-base-100 rounded-2xl shadow-xl overflow-hidden mb-8 hover:shadow-2xl transition-transform duration-300 hover:-translate-y-1 hover:scale-[1.01]">
               <div
                 class="aspect-video bg-gradient-to-br from-blue-500 to-blue-700 flex items-center justify-center relative">
+
                 <div class="text-center text-white">
-                  <button class="btn btn-circle btn-lg bg-white text-primaryBlue hover:bg-gray-100 border-0 mb-4">
+                  <div class="btn btn-circle btn-lg bg-white text-primaryBlue hover:bg-gray-100 border-0 mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-8 h-8">
                       <path d="M8 5v14l11-7z" />
                     </svg>
-                  </button>
+                  </div>
                   <p class="text-sm">Play Course Preview</p>
                 </div>
+
                 <img src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?q=80&w=1200"
                   class="absolute inset-0 w-full h-full object-cover opacity-40" alt="Course preview" />
               </div>
-            </div>
+            </a>
+
 
             <div class="mb-8">
               <h2 class="text-2xl font-bold mb-6">What You'll Learn</h2>
@@ -633,7 +637,8 @@
 
       <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
 
-      <div class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
+        <div
+          class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
           <figure class="relative">
             <img src="https://images.unsplash.com/photo-1587614382346-4ec70e388b28?q=80&w=600"
               class="h-40 w-full object-cover" />
@@ -641,13 +646,15 @@
           </figure>
           <div class="card-body p-4">
             <h3 class="font-bold">Mobile UX Design</h3>
-            <a href="course-details.html" class="btn btn-primary w-full rounded-full  transition duration-200 ease-out mt-4">
-            Learn Now
-          </a>
+            <a href="course-details.html"
+              class="btn btn-primary w-full rounded-full  transition duration-200 ease-out mt-4">
+              Learn Now
+            </a>
           </div>
         </div>
 
-      <div class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
+        <div
+          class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
           <figure class="relative">
             <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=600"
               class="h-40 w-full object-cover" />
@@ -655,13 +662,15 @@
           </figure>
           <div class="card-body p-4">
             <h3 class="font-bold">Material Design for Android</h3>
-            <a href="course-details.html" class="btn btn-primary w-full rounded-full  transition duration-200 ease-out mt-4">
-            Learn Now
-          </a>
+            <a href="course-details.html"
+              class="btn btn-primary w-full rounded-full  transition duration-200 ease-out mt-4">
+              Learn Now
+            </a>
           </div>
         </div>
 
-      <div class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
+        <div
+          class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
           <figure class="relative">
             <img src="https://images.unsplash.com/photo-1509395062183-67c5ad6faff9?q=80&w=600"
               class="h-40 w-full object-cover" />
@@ -669,13 +678,15 @@
           </figure>
           <div class="card-body p-4">
             <h3 class="font-bold">UI Design Advanced</h3>
-            <a href="course-details.html" class="btn btn-primary w-full rounded-full  transition duration-200 ease-out mt-4">
-            Learn Now
-          </a>
+            <a href="course-details.html"
+              class="btn btn-primary w-full rounded-full  transition duration-200 ease-out mt-4">
+              Learn Now
+            </a>
           </div>
         </div>
 
-      <div class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
+        <div
+          class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
           <figure class="relative">
             <img src="https://images.unsplash.com/photo-1561070791-2526d30994b5?q=80&w=600"
               class="h-40 w-full object-cover" />
@@ -683,9 +694,10 @@
           </figure>
           <div class="card-body p-4">
             <h3 class="font-bold">Design Thinking Workshop</h3>
-            <a href="course-details.html" class="btn btn-primary w-full rounded-full  transition duration-200 ease-out mt-4">
-            Learn Now
-          </a>
+            <a href="course-details.html"
+              class="btn btn-primary w-full rounded-full  transition duration-200 ease-out mt-4">
+              Learn Now
+            </a>
           </div>
         </div>
 
