--- a/profile.html
+++ b/profile.html
@@ -185,13 +185,6 @@
             <div class="badge badge-outline badge-sm mb-3">Design</div>
             <h3 class="text-xl font-bold mb-2">UX Design Fundamentals</h3>
             <p class="text-gray-600 text-sm mb-4">Master the core principles of user experience design</p>
-
-            <div class="flex items-center gap-2 text-sm text-gray-500 mb-4">
-              <span>Ahmed Mohamed</span>
-              <span>•</span>
-              <span>⭐ 4.8</span>
-            </div>
-
             <div class="mb-4">
               <div class="flex justify-between text-sm mb-2">
                 <span class="font-medium">Course Progress</span>
@@ -201,7 +194,7 @@
               <div class="text-xs text-gray-500 mt-1">29 of 45 lessons completed</div>
             </div>
 
-            <button class="btn btn-primary btn-sm rounded-lg w-full">Continue Learning</button>
+            <a href="course-player.html" class="btn btn-primary btn-sm rounded-lg w-full">Continue Learning</a>
           </div>
         </div>
       </div>
@@ -217,13 +210,6 @@
             <div class="badge badge-outline badge-sm mb-3">Design</div>
             <h3 class="text-xl font-bold mb-2">Mobile UX Design</h3>
             <p class="text-gray-600 text-sm mb-4">Create exceptional mobile user experiences</p>
-
-            <div class="flex items-center gap-2 text-sm text-gray-500 mb-4">
-              <span>Sarah Johnson</span>
-              <span>•</span>
-              <span>⭐ 4.9</span>
-            </div>
-
             <div class="mb-4">
               <div class="flex justify-between text-sm mb-2">
                 <span class="font-medium">Course Progress</span>
@@ -233,7 +219,7 @@
               <div class="text-xs text-gray-500 mt-1">18 of 38 lessons completed</div>
             </div>
 
-            <button class="btn btn-primary btn-sm rounded-lg w-full">Continue Learning</button>
+            <a href="course-player.html" class="btn btn-primary btn-sm rounded-lg w-full">Continue Learning</a>
           </div>
         </div>
       </div>
@@ -249,13 +235,6 @@
             <div class="badge badge-outline badge-sm mb-3">Development</div>
             <h3 class="text-xl font-bold mb-2">Web Development Bootcamp</h3>
             <p class="text-gray-600 text-sm mb-4">Complete guide to modern web development</p>
-
-            <div class="flex items-center gap-2 text-sm text-gray-500 mb-4">
-              <span>Michael Chen</span>
-              <span>•</span>
-              <span>⭐ 4.7</span>
-            </div>
-
             <div class="mb-4">
               <div class="flex justify-between text-sm mb-2">
                 <span class="font-medium">Course Progress</span>
@@ -284,13 +263,6 @@
             <div class="badge badge-outline badge-sm mb-3">Design</div>
             <h3 class="text-xl font-bold mb-2">UI Design Advanced</h3>
             <p class="text-gray-600 text-sm mb-4">Take your UI design skills to the next level</p>
-
-            <div class="flex items-center gap-2 text-sm text-gray-500 mb-4">
-              <span>Emily Roberts</span>
-              <span>•</span>
-              <span>⭐ 4.8</span>
-            </div>
-
             <div class="mb-4">
               <div class="flex justify-between text-sm mb-2">
                 <span class="font-medium">Course Progress</span>
@@ -316,13 +288,6 @@
             <div class="badge badge-outline badge-sm mb-3">Business</div>
             <h3 class="text-xl font-bold mb-2">Design Thinking Workshop</h3>
             <p class="text-gray-600 text-sm mb-4">Apply design thinking to solve complex problems</p>
-
-            <div class="flex items-center gap-2 text-sm text-gray-500 mb-4">
-              <span>David Martinez</span>
-              <span>•</span>
-              <span>⭐ 4.7</span>
-            </div>
-
             <div class="mb-4">
               <div class="flex justify-between text-sm mb-2">
                 <span class="font-medium">Course Progress</span>
