--- a/profile.html
+++ b/profile.html
@@ -174,7 +174,7 @@
 
     <div class="grid lg:grid-cols-2 gap-6 mb-12">
 
-      <div class="card bg-base-100 shadow-xl rounded-2xl hover:shadow-2xl transition overflow-hidden">
+      <div class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
         <div class="grid sm:grid-cols-5">
           <figure class="sm:col-span-2 relative">
             <img src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?q=80&w=600" class="h-full w-full object-cover" alt="Course" />
@@ -199,7 +199,7 @@
         </div>
       </div>
 
-      <div class="card bg-base-100 shadow-xl rounded-2xl hover:shadow-2xl transition overflow-hidden">
+      <div class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">
         <div class="grid sm:grid-cols-5">
           <figure class="sm:col-span-2 relative">
             <img src="https://images.unsplash.com/photo-1587614382346-4ec70e388b28?q=80&w=600" class="h-full w-full object-cover" alt="Course" />
@@ -224,8 +224,8 @@
         </div>
       </div>
 
-      <div class="card bg-base-100 shadow-xl rounded-2xl hover:shadow-2xl transition overflow-hidden">
-        <div class="grid sm:grid-cols-5">
+ <div
+          class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">        <div class="grid sm:grid-cols-5">
           <figure class="sm:col-span-2 relative">
             <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=600" class="h-full w-full object-cover" alt="Course" />
             <div class="absolute top-3 right-3 badge badge-primary">Completed</div>
@@ -252,8 +252,8 @@
         </div>
       </div>
 
-      <div class="card bg-base-100 shadow-xl rounded-2xl hover:shadow-2xl transition overflow-hidden">
-        <div class="grid sm:grid-cols-5">
+ <div
+          class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">        <div class="grid sm:grid-cols-5">
           <figure class="sm:col-span-2 relative">
             <img src="https://images.unsplash.com/photo-1509395062183-67c5ad6faff9?q=80&w=600" class="h-full w-full object-cover" alt="Course" />
             <div class="absolute top-3 right-3 badge badge-warning">Not Started</div>
@@ -277,8 +277,7 @@
         </div>
       </div>
 
-      <div class="card bg-base-100 shadow-xl rounded-2xl hover:shadow-2xl transition overflow-hidden">
-        <div class="grid sm:grid-cols-5">
+ <div class="card bg-base-100 shadow-lg hover:shadow-2xl transition-all duration-300 ease-out rounded-3xl overflow-hidden hover:-translate-y-2 hover:scale-[1.02]">        <div class="grid sm:grid-cols-5">
           <figure class="sm:col-span-2 relative">
             <img src="https://images.unsplash.com/photo-1561070791-2526d30994b5?q=80&w=600" class="h-full w-full object-cover" alt="Course" />
             <div class="absolute top-3 right-3 badge badge-primary">Completed</div>
@@ -314,7 +313,7 @@
           <p class="text-blue-100 text-lg">Explore thousands of courses and expand your knowledge</p>
         </div>
         <div>
-          <a href="all-courses.html" class="btn btn-lg bg-white text-primaryBlue hover:bg-gray-100 border-0 rounded-xl">
+          <a href="courses.html" class="btn btn-lg bg-white text-primaryBlue hover:bg-gray-100 border-0 rounded-xl">
             Browse All Courses
           </a>
         </div>
